--- a/WolvenKitUI/WolvenKitUI.csproj
+++ b/WolvenKitUI/WolvenKitUI.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.54">
+﻿<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
     <TargetFrameworks>net5.0-windows;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>WolvenKitUI</AssemblyName>
@@ -31,9 +31,11 @@
     <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
     <PackageReference Include="Dirkster.AvalonDock" Version="4.50.0" />
     <PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.50.0" />
-    <PackageReference Include="Dirkster.MLib" Version="1.3.1.2" />
-    <PackageReference Include="Dirkster.MWindowLib" Version="1.3.1.2" />
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="all" />
+    <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
     <PackageReference Include="Obsolete.Fody" Version="5.2.1" PrivateAssets="all" />
     <PackageReference Include="Orc.ProjectManagement" Version="4.0.2" />
@@ -103,6 +105,10 @@
     <Resource Include="Resources\Icons\SelectObject_16x.svg" />
     <Resource Include="Resources\Icons\Settings_16x.svg" />
     <Resource Include="Resources\Icons\SQLServerObjectExplorer_16x.svg" />
+    <Content Include="Resources\Images\git.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Resource Include="Resources\Images\Preferences_light_64x.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
