--- a/WolvenKitUI/Resources/AvalonDock.Layout.config
+++ b/WolvenKitUI/Resources/AvalonDock.Layout.config
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LayoutRoot>
   <RootPanel Orientation="Horizontal">
-	<LayoutAnchorablePaneGroup Orientation="Vertical" DockWidth="383">
-	  <LayoutAnchorablePane DockWidth="383" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="323" FloatingTop="492">
-		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" Title="ProjectExplorer" IsSelected="True" FloatingLeft="323" FloatingTop="492" FloatingWidth="385" FloatingHeight="864" LastActivationTimeStamp="11/30/2020 20:18:30" />
+	<LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="383" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="23" FloatingTop="568">
+	  <LayoutAnchorablePane DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="23" FloatingTop="568">
+		<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" Title="ProjectExplorer" IsSelected="True" ContentId="ProjectExplorer_Tool" FloatingLeft="23" FloatingTop="568" FloatingWidth="385" FloatingHeight="431" LastActivationTimeStamp="12/04/2020 15:04:12" />
 	  </LayoutAnchorablePane>
-	  <LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="383" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="472" FloatingTop="545">
-		<LayoutAnchorablePane DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="472" FloatingTop="545">
-		  <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" Title="Log" IsSelected="True" FloatingLeft="472" FloatingTop="545" FloatingWidth="385" FloatingHeight="864" LastActivationTimeStamp="11/30/2020 20:18:35" />
-		</LayoutAnchorablePane>
-	  </LayoutAnchorablePaneGroup>
 	</LayoutAnchorablePaneGroup>
-	<LayoutAnchorablePane Id="edddc4fb-c1ba-486d-bba7-952e9fd1d0ca" DockWidth="383" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="20" FloatingTop="570" />
 	<LayoutPanel Orientation="Vertical">
 	  <LayoutPanel Orientation="Horizontal">
-		<LayoutDocumentPane />
+		<LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="383" FloatingWidth="385" FloatingHeight="431" FloatingLeft="11" FloatingTop="573">
+		  <LayoutAnchorablePane Id="8fdf8f3a-0bd6-4e12-b189-d64361c46b5f" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="11" FloatingTop="573" />
+		</LayoutAnchorablePaneGroup>
+		<LayoutPanel Orientation="Vertical">
+		  <LayoutPanel Orientation="Horizontal">
+			<LayoutDocumentPane />
+		  </LayoutPanel>
+		  <LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="375" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="963" FloatingTop="975">
+			<LayoutAnchorablePane Id="1700c363-79ab-49cb-8ab8-6b029a63ae5d" DockHeight="427" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="963" FloatingTop="975" />
+		  </LayoutAnchorablePaneGroup>
+		</LayoutPanel>
 	  </LayoutPanel>
+	  <LayoutAnchorablePaneGroup Orientation="Horizontal" DockHeight="405" FloatingWidth="385" FloatingHeight="431" FloatingLeft="960" FloatingTop="973">
+		<LayoutAnchorablePane DockHeight="405" DockMinWidth="375" FloatingWidth="385" FloatingHeight="431" FloatingLeft="960" FloatingTop="973">
+		  <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" Title="Log" IsSelected="True" ContentId="Log_Tool" FloatingLeft="960" FloatingTop="973" FloatingWidth="385" FloatingHeight="431" LastActivationTimeStamp="12/04/2020 15:04:09" />
+		</LayoutAnchorablePane>
+	  </LayoutAnchorablePaneGroup>
 	</LayoutPanel>
-	<LayoutAnchorablePaneGroup Orientation="Horizontal" DockWidth="383" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="1878" FloatingTop="572">
-	  <LayoutAnchorablePane Id="849c06ca-471e-4077-b2c8-3b32eda20c63" DockMinWidth="375" FloatingWidth="385" FloatingHeight="864" FloatingLeft="1878" FloatingTop="572" />
-	</LayoutAnchorablePaneGroup>
   </RootPanel>
   <TopSide />
   <RightSide />
@@ -27,7 +33,7 @@
   <BottomSide />
   <FloatingWindows />
   <Hidden>
-	<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="ProjectExplorer" IsSelected="True" FloatingLeft="20" FloatingTop="570" FloatingWidth="385" FloatingHeight="864" LastActivationTimeStamp="11/30/2020 20:18:24" PreviousContainerId="edddc4fb-c1ba-486d-bba7-952e9fd1d0ca" PreviousContainerIndex="0" />
-	<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Log" IsSelected="True" FloatingLeft="1878" FloatingTop="572" FloatingWidth="385" FloatingHeight="864" LastActivationTimeStamp="11/30/2020 20:18:24" PreviousContainerId="849c06ca-471e-4077-b2c8-3b32eda20c63" PreviousContainerIndex="0" />
+	<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="ProjectExplorer" IsSelected="True" FloatingLeft="11" FloatingTop="573" FloatingWidth="385" FloatingHeight="431" LastActivationTimeStamp="12/04/2020 15:03:48" PreviousContainerId="8fdf8f3a-0bd6-4e12-b189-d64361c46b5f" PreviousContainerIndex="0" />
+	<LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Log" IsSelected="True" FloatingLeft="963" FloatingTop="975" FloatingWidth="385" FloatingHeight="864" LastActivationTimeStamp="12/04/2020 15:03:48" PreviousContainerId="1700c363-79ab-49cb-8ab8-6b029a63ae5d" PreviousContainerIndex="0" />
   </Hidden>
 </LayoutRoot>
