--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,32 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Declare files to normalize crlf, in case people don't have core.autocrlf set.
+*.conf			text eol=crlf
+*.config		text eol=crlf
+*.cs			text eol=crlf
+*.csproj		text eol=crlf
+*.csv			text eol=crlf
+*.editorconfig		text eol=crlf
+*.gitattributes		text eol=crlf
+*.gitignore		text eol=crlf
+*.gitmodules		text eol=crlf
+*.manifest		text eol=crlf
+*.md			text eol=crlf
+*.resx			text eol=crlf
+*.settings		text eol=crlf
+*.sln			text eol=crlf
+*.txt			text eol=crlf
+*.xml			text eol=crlf
+*.yml			text eol=crlf
+# Explicitly declare files you do not want to be treated as text
+*.bmp binary
+*.dll binary
+*.exe binary
+*.ico binary
+*.jpg binary
+*.md2 binary
+*.png binary
+*.rtf binary
+*.svg -text binary
+*.tga binary
+*.xbm binary
+*.zip binary
+*.lib filter=lfs diff=lfs merge=lfs -text
