--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -34,7 +34,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AvalonEdit" Version="6.0.1" />
     <PackageReference Include="Catel.Core" Version="5.12.11" />
     <PackageReference Include="Catel.MVVM" Version="5.12.11" />
     <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
@@ -52,9 +51,11 @@
     <PackageReference Include="MahApps.Metro.IconPacks.BoxIcons" Version="4.8.0" />
     <PackageReference Include="MahApps.Metro.IconPacks.Codicons" Version="4.8.0" />
     <PackageReference Include="MarkerMetro.Unity.Ionic.Zlib" Version="2.0.0.14" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.8.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.664.37" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NodeNetwork" Version="5.1.1" />
     <PackageReference Include="Octokit" Version="0.48.0" />
     <PackageReference Include="Orc.CommandLine" Version="4.0.0" />
     <PackageReference Include="Orc.FileSystem" Version="4.1.1" />
@@ -63,6 +64,7 @@
     <PackageReference Include="Orc.Theming" Version="4.2.0" />
     <PackageReference Include="Pfim" Version="0.9.1" />
     <PackageReference Include="protobuf-net" Version="3.0.73" />
+    <PackageReference Include="RoslynPad.Editor.Windows" Version="1.2.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
     <PackageReference Include="Snappy.NET" Version="1.1.1.8" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
