--- a/CP77.CR2W/WolvenKit.Cyberformats.csproj
+++ b/CP77.CR2W/WolvenKit.Cyberformats.csproj
@@ -28,6 +28,8 @@
 		<PackageReference Include="FastMember" Version="1.5.0" />
 		<PackageReference Include="FastMember.NetCore" Version="1.1.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    		<PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0020" />
+    		<PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
 	</ItemGroup>
 
 	<ItemGroup>
